<resources>
    <string name="app_name">Appdev Project</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_fragment">Saved Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profilepage">Profile</string>
    <string name="todo">TODO</string>
    <string name="fullname">Fullname</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="fname">Firstname</string>
    <string name="lname">Lastname</string>
    <string name="uname">Username</string>
    <string name="email_">Email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="edit_profile_page">Edit Profile</string>
    <string name="save">Save</string>
    <string name="pemail">Email</string>
    <string name="pfirstname">Firstname</string>
    <string name="plastname">Lastname</string>
    <string name="pusername">Username</string>
    <string name="logo">TODO</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign up</string>
    <string name="new_to_cooking">New to cooking?</string>
    <string name="send">Send</string>
    <string name="a_verfication_code">a verfication code</string>
    <string name="enter_email_address_to_receive">Enter Email Address to receive</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="enter_email">Enter Email</string>
    <string name="verify">Verify</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="Enter_verification_code">Enter Verification Code</string>
    <string name="verification">Verification</string>
    <string name="resend_code">Resend Code</string>
    <string name="submit">Submit</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="Enter_new_password">Enter New Password</string>
    <string name="new_password">New Password</string>
    <string name="signup">Sign Up</string>
    <string name="Sign_up">Sign Up</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="Email">Email</string>
    <string name="enteremail">Enter Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="Username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="username_">Username</string>
    <string name="firstname_" />
    <string name="enter_username_">Enter Username</string>
    <string name="last_name_">Last Name</string>
    <string name="enter_last_name_">Enter Last Name</string>
    <string name="enter_first_name_">Enter First Name</string>
    <string name="first_name_">First Name</string>
    <string name="Submit">Submit</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="Confirm_password">Confirm Password</string>
    <string name="enter_new_password_">Enter New Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password_">New Password</string>
    <string name="change_password_">Change Password</string>
    <string name="back">TODO</string>
    <string name="ilocos_sur">Ilocos Sur</string>
    <string name="region_i">Region I</string>
    <string name="pangasinan">Pangasinan</string>
    <string name="ilocos_norte">Ilocos Norte</string>
    <string name="la_union">La Union</string>
    <string name="luzon_back">TODO</string>
    <string name="cordillera_administrative_region_car">Cordillera Administrative Region (CAR)</string>
    <string name="region_i_">Region I</string>
    <string name="region_iii_central_luzon">Region III (Central Luzon)</string>
    <string name="region_v_bicol_region">Region V (Bicol Region)</string>
    <string name="region_iv_b_mimaropa">Region IV B - MIMAROPA</string>
    <string name="region_iv_a_calabarzon">Region IV A - CALABARZON</string>
    <string name="national_capital_region_ncr">National Capital Region (NCR)</string>
    <string name="region_ii_cagayan_valley">Region II (Cagayan Valley)</string>
    <string name="ilocos_norte_region_i">Region I -</string>
    <string name="rI_ilocos_norte">Ilocos Norte</string>
    <string name="vigan_longganisa">Vigan Longganisa</string>
    <!-- LUZON->REGION 1->ILOCOS NORTE -->
    <string name="ViganLongganisa"><b>Prep Time</b>
    15 mins
    Cooking Time
    7 mins
    Total Time
    17 mins

<b>Ingredients:</b>
    3/4 kilogram ground pork
    1/4 kilogram pork fat
    1/4 cup garlic, minced
    1 teaspoon ground black pepper
    1/4 cup soy sauce
    1 teaspoon annatto powder (atsuete)
    1/4 cup iloko vinegar (sukang iloko), or vinegar

<b>How to Cook</b>
   ~ In a large bowl, mix ground pork, pork fat, garlic, pepper, soy sauce, atsuete powder, and vinegar until well blended.
   ~ Portion meat mixture using an ice cream scoop onto a sheet of wax paper, measuring 5'' x 5''-inches. Roll until it forms into a log. Repeat with remaining meat mixtures
   ~ Chill for at least 12 hours.

<i><b>Originated</b>
    Luzon
    Region I, Ilocos Norte</i>






    </string>
    <string name="Bookmark">TODO</string>
    <string name="bookmark">TODO</string>


</resources>